Use exec with arg array